--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,6 +4,10 @@
   justify-content: space-between;
 }
 
-.container section, .container nav{
-   padding: 0 2rem;
+
+
+@media screen and (max-width:600px) {
+  .container section{
+   padding: 0 1rem;
+}
 }
