--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -2,5 +2,60 @@
   width: 100%;
   background-color: var(--black);
   color: var(--white);
-  height: 18rem;
+  display: flex;
+  flex-direction: column;
+  gap:2rem;
+  padding: 4rem 10rem;
+}
+
+.mainContentContainer{
+  display: grid;
+  grid-template-columns: repeat(7,1fr);
+  grid-template-rows: auto;
+}
+
+.imgContainer{
+  grid-column: 1/3;
+}
+
+.divider{
+  border-bottom: 0.063rem var(--white) solid;  
+}
+
+.commonContainer{
+  display: flex;
+  flex-direction: column;
+}
+
+.noOfJobs{
+  background-color: var(--white);
+  color: var(--black);
+  font-weight: 400;
+  font-size: 0.9rem;
+  border-radius: 0.7rem;
+  padding-bottom: 0.2rem;
+  height: 1.3rem;
+  width: 1.3rem;
+  margin-left: 0.6rem;
+  margin-top: 0.3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+@media screen and (max-width:600px) {
+ .footer{
+  padding: 2rem 1rem;
+ } 
+ .mainContentContainer{
+  grid-template-columns: repeat(3,1fr);
+  row-gap: 1rem;
+  padding: 0rem 1rem;
+ }
+ .imgContainer{
+  grid-column: 1/4;
+}
+
 }
