--- a/styles/Slogans.module.css
+++ b/styles/Slogans.module.css
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   padding: 4rem 9rem 5rem 9rem; 
+  box-shadow: 0px 2px 8px rgba(26, 24, 30, 0.06);
 }
 .sloganContainer {
    padding: 0 10rem;
@@ -67,6 +68,13 @@
   border-radius: 0.3rem;
   display: flex;
   align-items: center;
+  border: 0.1rem solid var(--primary);
+}
+
+.generateBtn:hover{
+  background-color: var(--white);
+  color: var(--primary);
+  border: 0.1rem solid var(--primary);
 }
 
 .slogansTitle{
@@ -84,6 +92,10 @@
   border-radius: 0.3rem;
   color: var(--primary);
   padding: 0.1rem  1rem 0.3rem;  
+}
+.downloadBtn:hover{
+  color: var(--white);
+  background: var(--primary);
 }
 
 .slogan{
@@ -162,7 +174,7 @@
     width: max-content;
   }
   .searchIcon{
-    left:80%
+    left:65%
   }
 
   .downloadBtn{
@@ -173,5 +185,11 @@
   }
   .copiedPanel{
    display: none;
+  }
+  .pageNumber{
+  margin-right: 0.3rem; 
+  }
+  .activePageNum{
+    margin-right: 0.3rem;
   }
 }
